--- a/userpage/style.css
+++ b/userpage/style.css
@@ -162,3 +162,25 @@ nav a {
   color: white;
 }
 
+.project-upload {
+  color: white;
+  width: 100%;
+  height: 100%;
+  padding-left: 500px;
+  padding-top: 50px;
+  display: flex;
+  flex-direction: column;
+}
+
+.project-upload .forms-box{
+  border: 2px solid rgba(26, 61, 157, 0.447);
+  border-radius: 15px;
+}
+.project-upload .forms-box input{
+  width: 350px;
+  border: 0.5 solid  rgba(26, 61, 157, 0.447);
+  background-color:  rgba(26, 61, 157, 0.447);
+  border-radius: 30px;
+  border-style: none;
+}
+
